syntax = "proto3";

option java_multiple_files = true;
option java_package = "belac.blogs.grpc";
option java_outer_classname = "OrderProto";

package order;

service Order {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
  string code = 1;
  string type = 2;
}

message CreateOrderResponse {
  uint64 id = 1;
}